[metadata]
name = pyixia
version = 0.0.1
author = Michael Walle
author_email = michael.walle@kontron.com
description = Pure python IXIA library
url = https://github.com/kontron/python-ixia
license = LGPLv2+
license_file = COPYING
classifiers = 
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3',
    Programming Language :: Python :: 3.7',
    Programming Language :: Python :: 3.8',
    Programming Language :: Python :: 3.9',
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
test_suite = tests
setup_requires = setuptools
tests_requires = nose
python_requires = >=3.7

[options.entry_points]
console_scripts = 
    ixia-cli = pyixia.cli_tool:main
    ixtcl-cli = pyixia.ixtcl:main
